@@ -125,14 +125,16 @@ typedef struct _PH_THREADS_CONTEXT
 } PH_THREADS_CONTEXT, *PPH_THREADS_CONTEXT;
 
 #define WM_PH_MODULE_ADDED (WM_APP + 211)
-#define WM_PH_MODULE_REMOVED (WM_APP + 212)
-#define WM_PH_MODULES_UPDATED (WM_APP + 213)
+#define WM_PH_MODULE_MODIFIED (WM_APP + 212)
+#define WM_PH_MODULE_REMOVED (WM_APP + 213)
+#define WM_PH_MODULES_UPDATED (WM_APP + 214)
 
 typedef struct _PH_MODULES_CONTEXT
 {
     PPH_MODULE_PROVIDER Provider;
     PH_PROVIDER_REGISTRATION ProviderRegistration;
     PH_CALLBACK_REGISTRATION AddedEventRegistration;
+    PH_CALLBACK_REGISTRATION ModifiedEventRegistration;
     PH_CALLBACK_REGISTRATION RemovedEventRegistration;
     PH_CALLBACK_REGISTRATION UpdatedEventRegistration;
 
